# panagia

./: .editorconfig  .ghci  CHANGELOG.md  README.md  Setup.hs  cabal.haskell-ci  cabal.project  panagia.cabal
.github/workflows/: codestyle.yml  haskell-ci.yml
benchmark/: Main.hs
benchmark/Panagia/Quorum/: Benchmark.hs
src/Panagia/: Paxos.hs  Quorum.hs
src/Panagia/Paxos/: Free.hs  SingleDecree.hs
src/Panagia/Paxos/SingleDecree/: Free.hs  Monad.hs  Types.hs
test/: Main.hs  panagia-doctest.hs  panagia-test-smt.hs  panagia-test.hs
test/Panagia/Paxos/: Pure.hs
test/Panagia/Paxos/SingleDecree/: Test.hs
test/Panagia/Paxos/SingleDecree/Test/: Monad.hs  Types.hs  Utils.hs
test/Panagia/Quorum/: Test.hs
test/Panagia/Quorum/Test/: SMT.hs
