cabal-version:   3.0
build-type:      Custom
name:            panagia
version:         0.0.1.0
synopsis:        An island close to Paxos
description:
  Experiments to build a verified Paxos implementation in Haskell.

homepage:        https://github.com/NicolasT/panagia
bug-reports:     https://github.com/NicolasT/panagia/issues
license:         GPL-3.0-only
license-file:    LICENSE
author:          Nicolas Trangez
maintainer:      ikke@nicolast.be
copyright:       (c) 2022, Nicolas Trangez
category:        Network
stability:       Experimental
extra-doc-files: CHANGELOG.md
tested-with:     GHC ==9.4.3

custom-setup
  setup-depends:
    , base           ^>=4.17.0.0
    , Cabal          ^>=3.6.3.0  || ^>=3.8.1.0
    , cabal-doctest  ^>=1.0.9

source-repository head
  type:     git
  location: https://github.com/NicolasT/panagia.git
  branch:   main

flag werror
  description: Turn compiler warnings into errors.
  default:     False
  manual:      True

flag test-doctest
  description: Run doctests as a Cabal test-suite
  default:     False
  manual:      True

common warnings
  ghc-options:
    -Wall -Wcompat -Wcpp-undef -Widentities -Wincomplete-patterns
    -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-export-lists -Wmissing-home-modules -Worphans
    -Wpartial-fields -Wredundant-constraints

  if flag(werror)
    ghc-options: -Werror -optc=-Werror
    cc-options:  -Werror

library
  import:           warnings
  hs-source-dirs:   src
  default-language: Haskell2010
  exposed-modules:  Panagia.Quorum
  other-modules:
  build-depends:
    , base        ^>=4.17.0.0
    , containers  ^>=0.6.6

executable panagia
  import:           warnings
  hs-source-dirs:   app
  default-language: Haskell2010
  main-is:          Main.hs
  other-modules:
  build-depends:
    , base     ^>=4.17.0.0
    , panagia

test-suite panagia-test
  import:           warnings
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  default-language: Haskell2010
  main-is:          panagia-test.hs
  other-modules:    Panagia.Quorum.Test
  build-depends:
    , base              ^>=4.17.0.0
    , containers        ^>=0.6.6
    , panagia
    , tasty             ^>=1.4.3
    , tasty-hunit       ^>=0.10.0.3
    , tasty-quickcheck  ^>=0.10.2

benchmark panagia-bench
  import:           warnings
  type:             exitcode-stdio-1.0
  hs-source-dirs:   benchmark
  default-language: Haskell2010
  main-is:          Main.hs
  other-modules:    Panagia.Quorum.Benchmark
  build-depends:
    , base        ^>=4.17.0.0
    , containers  ^>=0.6.6
    , criterion   ^>=1.6.0.0
    , panagia

test-suite panagia-doctest
  import:               warnings
  x-doctest-components: lib

  if flag(test-doctest)
    buildable: True

  else
    buildable: False

  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  default-language:     Haskell2010
  main-is:              panagia-doctest.hs
  other-modules:        Build_doctests
  autogen-modules:      Build_doctests

  -- Disable warnings triggered by the (generated) 'Build_doctests' module
  ghc-options:          -Wno-missing-export-lists
  build-depends:
    , base              ^>=4.17.0.0
    , doctest           ^>=0.20.1
    , panagia
    , QuickCheck        ^>=2.14.2
    , template-haskell  ^>=2.19.0.0
